testsuite/tests/runghc/T17171.stderr
Main.hs:1:1: error:
    The IO action ‘main’ is not exported by module ‘Main’
  |
1 | module Main () where
  | ^
