testsuite/tests/runghc/T17171.hs
module Main () where

main :: IO ()
main = putStrLn "The impossible happened"
